<resources>

    <string name="app_name">QQ手机Mini管家</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="note_sdcard_unavailable">SDCard不可用</string>
    <string name="note_dir_is_empty">该目录为空</string>

    <string name="tab_local_tool">本地功能</string>
    <string name="tab_toolbox">工具箱</string>
    <string name="tab_remote_tool">网络工具</string>
    <string name="tab_downloaded_apps">已安装应用</string>
    <string name="tab_original_apks">未安装应用</string>
    
    <string name="entry_file_manager">文件管理</string>
    <string name="entry_app_manager">程序管理</string>
    <string name="entry_quick_setting">快速设置</string>
    <string name="entry_installation_and_uninstallation">安装卸载</string>
    <string name="entry_shortcut">快捷方式</string>
    <string name="entry_system_setting">系统开机</string>
    
    <string name="title_airplane_mode">飞行模式</string>
    <string name="title_wifi">WiFi连接</string>
    <string name="title_bluetooth">蓝牙连接</string>
    <string name="title_mobile_network">网络数据</string>
    <string name="title_silent">静音</string>
    <string name="title_auto_rotate">自动旋转</string>
    
    <string name="key_airplane_mode">apply_airplane_mode</string>
    <string name="key_wifi">apply_wifi</string>
    <string name="key_bluetooth">apply_bluetooth</string>
    <string name="key_mobile_network">apply_mobile_network</string>
    <string name="key_silent">apply_silent</string>
    <string name="key_auto_rotate">apply_autorotate</string>
    
    <string name="summary_airplane_mode">禁用所有无线连接</string>
    <string name="summary_wifi_off">打开Wi-Fi</string>
    <string name="summary_wifi_on">关闭Wi-Fi</string>
    <string name="summary_bluetooth_off">启用蓝牙</string>
    <string name="summary_bluetooth_on">关闭蓝牙</string>
    <string name="summary_mobile_network">数据网络</string>
    
</resources>